Changed url redirection

--- a/src/main/resources/static/info.html
+++ b/src/main/resources/static/info.html
@@ -23,7 +23,7 @@
 </body>
 <script>
     function out(){
-        window.location.href = "http://localhost:8080/logout"
+        window.location.pathname = "/logout"
     }
     function run2(){
         document.getElementById("btn1").style.display = "none"
