--- a/src/main/resources/static/login.html
+++ b/src/main/resources/static/login.html
@@ -22,7 +22,7 @@
 
 <script>
     function start(){
-        window.location.href = 'http://localhost:8080/login'
+        window.location.pathname = "/login"
         document.getElementById("log").style.display = "none"
         document.getElementById("title").style.display = "none"
     }
